fix wordwrap in Chrome

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -57,8 +57,10 @@
 	margin: 0 0 1.5em;
 }
 
-.site-content {
-  @include make-row();
+
+.site-content { 
+  @include make-row();  
+  word-break: break-word; 
 
   .content-area {
     @include make-md-column(9);
