--- a/style.css
+++ b/style.css
@@ -8199,7 +8199,8 @@ button.close {
   margin-right: -15px;
   content: "";
   display: table;
-  table-layout: fixed; }
+  table-layout: fixed;
+  word-break: break-word; }
   .site-content .content-area {
     position: relative;
     min-height: 1px;
